@@ -3988,3 +3988,7 @@ Added: 'H' shortcut for variables to get the value as hexadecimal.
 
 08-01-2025, DavideRei
 - Fixed: NPC FLEE action didn't work because it was using action target (empty) instead of fight target
+
+20-01-2025, Xwerswoodx
+Changed: Now CHARDEFs can read custom Item Resources as an ICON, the restriction of being TILEDATA value is removed. (Issue: #1301)
+Fixed: The unmatched default value query was causing the price of items without a set price to return as -2,147,483,648. (Issue: #1233)
